# typetestserver

./: .env-example  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
src/application/exceptions/: profile.py  token.py  user.py
src/application/interfaces/: email_sender.py
src/application/use_cases/: config.py  profile.py  result.py  user.py
src/config/: database.py  google_oauth.py  smtp_email.py
src/domain/common/dto/: base.py
src/domain/common/exceptions/: base.py
src/domain/common/repository/: base.py
src/domain/config/dto/: config.py
src/domain/config/exceptions/: config.py
src/domain/config/use_case/: config.py
src/domain/profile/dto/: profile.py
src/domain/profile/use_case/: profile.py
src/domain/result/dto/: result.py
src/domain/result/exceptions/: result.py
src/domain/result/use_cases/: result.py
src/domain/token/dto/: token.py
src/domain/user/dto/: user.py
src/domain/user/exceptions/: user.py
src/domain/user/use_cases/: user.py
src/infrastructure/: dependencies.py
src/infrastructure/celery/: celery_app.py  tasks.py
src/infrastructure/database/: __init__.py  base.py
src/infrastructure/database/models/: profile.py  results_history.py  user.py  user_config.py
src/infrastructure/database/repositories/: base.py  config.py  profile.py  result.py  user.py
src/infrastructure/email/: smtp_email_sender.py
src/infrastructure/migrations/: env.py
src/infrastructure/security/: jwt_service.py  password_hasher.py
src/presentation/api/auth/: requests.py  responses.py  routes.py
(+11 files in other folders)
